--- a/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj.filters
+++ b/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj.filters
@@ -21,6 +21,12 @@
     <Text Include="VertShader.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="SkyboxVertShader.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="SkyboxFragShader.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp">
@@ -56,6 +62,9 @@
     <ClCompile Include="LightManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Skybox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObject.h">
@@ -89,6 +98,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LightManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Skybox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
