--- a/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj
+++ b/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj
@@ -154,6 +154,7 @@
     <Text Include="VertShader.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
@@ -168,6 +169,7 @@
     <ClCompile Include="Skybox.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectManager.h" />
