Colliding bouncing balls... kinda

--- a/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj
+++ b/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="glew.c" />
@@ -171,6 +172,7 @@
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectManager.h" />
     <ClInclude Include="glew.h" />
