kinda parralax mapping ish

--- a/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj.filters
+++ b/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Paralax.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObject.h">
@@ -113,6 +116,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CollisionManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Paralax.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
