--- a/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj
+++ b/PGG_OBJ_Loader/PGG_OBJ_Loader.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Paralax.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Skybox.cpp" />
   </ItemGroup>
@@ -181,6 +182,7 @@
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Paralax.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="wglew.h" />
